# mlx-performance-test

./: README.md  dot_product.py  pyproject.toml
